<resources>
    <string name="app_name">ALLNews</string>
    <string name="click_to_login"><u>Already have an account?</u></string>
    <string name="click_to_signup"><u>SignUp</u></string>
    <string name="hint_for_collection">Your favorite news is as follows:</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="main_hint">Welcome!\n Please click the category to get related news!</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="content">Content</string>
    <string name="read_more">Read More About this News...</string>
    <string name="profile">Profile</string>
    <string name="hint_user_name">User Name</string>
    <string name="hint_email">Email</string>
    <string name="update">Update</string>
    <string name="subscribed_category">Subscribed category:</string>
    <string name="manage_the_channel">Manage the Channel</string>
    <string name="sign_out">Sign Out</string>
    <string name="select_hint">Please select the category you are interested in</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="next">Next</string>
    <string name="register">Register</string>
    <string name="input_your_email_address">Input your email address...</string>
    <string name="input_your_username">Input your username...</string>
    <string name="input_your_password">Input your password...</string>
    <string name="confirm_your_password">Confirm your password...</string>
    <string name="sign_up">Sign Up</string>
    <string name="skip">Skip</string>
    <string name="discover_news_in_life">Discover news in Life</string>
    <string name="category">category</string>
</resources>