<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/Grey_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:src="@drawable/ic_library_books_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13">

    </ImageView>

    <TextView
        android:id="@+id/selcategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_hint"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

    </TextView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="396dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/selcategory"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toStartOf="@+id/selcategory"
        app:layout_constraintTop_toBottomOf="@+id/selcategory">

        <CheckBox
            android:id="@+id/business"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:background="@drawable/input_frame"
            android:drawablePadding="10dp"
            android:text="@string/business" />

        <CheckBox
            android:id="@+id/entertainment"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_frame"
            android:drawablePadding="10dp"
            android:text="@string/entertainment" />

        <CheckBox
            android:id="@+id/general"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_frame"
            android:text="@string/general" />

        <CheckBox
            android:id="@+id/health"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_frame"
            android:text="@string/health" />

        <CheckBox
            android:id="@+id/science"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_frame"
            android:text="@string/science" />

        <CheckBox
            android:id="@+id/sports"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_frame"
            android:text="@string/sports" />

        <CheckBox
            android:id="@+id/technology"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_frame"
            android:text="@string/technology" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_frame"
        android:text="@string/next"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>




</androidx.constraintlayout.widget.ConstraintLayout>