<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Grey_bg"
    tools:context=".ProfileActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/ic_library_books_black_24dp" />

        </androidx.appcompat.widget.Toolbar>


        <TextView
            android:id="@+id/Profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ProfileUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Profile"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_user_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_perm_identity_black_24dp"
                android:drawablePadding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ProfileEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ProfileUserName"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawablePadding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/Update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ProfileEmail"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/input_frame"
            android:padding="8dp"
            android:text="@string/update"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageFrame"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/Update_button"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/image_frame">


        </ImageView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/Update_button"
            android:orientation="vertical">
            <TextView
                android:id="@+id/HintforCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/subscribed_category"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/ChosenCategory"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/HintforCategory"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:text="Technology\nEntertainment"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/manageChannel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/input_frame"
                android:padding="8dp"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/ChosenCategory"
                android:text="@string/manage_the_channel"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>


        <Button
            android:id="@+id/LogOut_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageFrame"
            android:layout_centerInParent="true"
            android:layout_marginTop="18dp"
            android:background="@drawable/input_frame"
            android:padding="8dp"
            android:text="@string/sign_out"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">


        <ImageView
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/footer_selector"
            android:src="@drawable/ic_home_black_24dp" />

        <ImageView
            android:id="@+id/CollectionNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/footer_selector"
            android:src="@drawable/ic_collections_bookmark_black_24dp" />

    </RelativeLayout>




</RelativeLayout>