<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Grey_bg"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".NewsDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/ic_library_books_black_24dp" />

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/NewsImage"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:scaleType="fitXY"
            android:layout_below="@+id/logo"/>

        <ImageView
            android:id="@+id/imageFrame"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:layout_below="@+id/logo"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/image_frame" />

        <ScrollView
            android:id="@+id/news_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/imageFrame"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/NewsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/NewsAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="@string/author"
                    android:textColor="@color/Grey_deep"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/NewsPublishAt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="@string/date"
                    android:textColor="@color/Grey_deep"
                    android:textSize="15sp" />


                <TextView
                    android:id="@+id/NewsDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/description"
                    android:textColor="@color/Grey_deep"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/NewsContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/content"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/ReadMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/btn_selector"
                    android:padding="5dp"
                    android:text="@string/read_more"
                    android:textSize="15sp" />

            </LinearLayout>

        </ScrollView>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">


        <ImageView
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/footer_selector"
            android:src="@drawable/ic_home_black_24dp" />

        <ImageView
            android:id="@+id/collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/footer_selector"
            android:src="@drawable/ic_favorite_border_black_24dp" />

        <ImageView
            android:id="@+id/NotCollect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/footer_selector"
            android:src="@drawable/ic_favorite_black_24dp"
            android:visibility="gone"/>



        <ImageView
            android:id="@+id/CollectionNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/footer_selector"
            android:src="@drawable/ic_collections_bookmark_black_24dp" />

    </RelativeLayout>

</RelativeLayout>